@@ -18,11 +18,12 @@ James Curbo      hannibal at adtrw dot org
 Bjarne Steinsbø  bosteins at broadpark dot no
 Jacek Konieczny  jajcus at bnet dot pl
 Albert Chin      china at thewrittenword dot com
+Steven Walter    stevenrwalter at gmail dot com
 
 several important bits of gtk2-perl were heavily inspired by pygtk, gtk-perl,
 and a good read-through of the gtk+ source code, so credit goes to those guys
 as well -- thanks!
 
-Copyright (C) 2003-2004 by the gtk2-perl team.
+Copyright (C) 2003-2005 by the gtk2-perl team.
 
 gtk2-perl is covered by the LGPL -- see the file LICENSE for details.
